--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">GraphFunctions</string>
+    <string name="app_name">Functions</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">SplashActivity</string>
-    <string name="app_title">Graphic Functions</string>
+    <string name="app_title">Functions</string>
     <string name="main_activite_title">DEFINE THE DATA</string>
     <string name="main_activite_operation">OPERATION</string>
     <string name="main_activite_1_operation">SECOND</string>
-    <string name="title_activity_graph">GraphActivity</string>
+    <string name="title_activity_graph">Functions</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="First_operation_activity_main">First Operation</string>
     <string name="Second_operation_activity_main">Second Operation</string>
@@ -18,4 +18,5 @@
     <string name="third_equation">Third Equation</string>
     <string name="third_Rule">X >= </string>
     <string name="third_Rule_hint">Enter a number</string>
+    <string name="Limit">Limit</string>
 </resources>
